# gps_ws

./: CLAUDE.md  README.md
assets/data/data1/: data1_0.db3  metadata.yaml
assets/data/data2/: data2_0.db3  metadata.yaml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/gps/lib/gps/: gps_node
install/gps/share/gps/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
log/build_2026-05-31_16-56-00/: summary.md
src/gps/: CMakeLists.txt  package.xml  tree.xml
src/gps/src/: gps_node.cpp  tree.xml
src/gps/src/SerialPort/: usart.cpp  usart.hpp
src/gps/src/map/: map.cpp  map.h
src/gps/uart/: uart.h
vision/: package.xml  setup.py  vision.py  vision2.py
vision/params/: vision_params.yaml
vision/vision/: vision.py
